--- a/src/MainFile/login.form
+++ b/src/MainFile/login.form
@@ -136,7 +136,7 @@
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
         </Property>
         <Property name="horizontalAlignment" type="int" value="0"/>
-        <Property name="text" type="java.lang.String" value="Username    ="/>
+        <Property name="text" type="java.lang.String" value="Passwrod    ="/>
       </Properties>
     </Component>
   </SubComponents>
